force-app/main/default/objects/Client_Operating_Countries__c/Client_Operating_Countries__c.object-meta.xml
<CustomObject>
    <label>Client Operating Countries</label>
    <nameField>
        <displayFormat>COO - {00000}</displayFormat>
        <label>Client Operating Countries Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Operating Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>