force-app/main/default/objects/Client_Operating_Countries__c/fields/CIB_Presence__c.field-meta.xml
<CustomField>
    <fullName>CIB_Presence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when Standard Bank is operating in the country</description>
    <label>CIB Presence</label>
    <type>Checkbox</type>
</CustomField>