force-app/main/default/objects/Client_Operating_Countries__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <label>Client Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Operating Countries</relationshipLabel>
    <relationshipName>Client_Operating_Countries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>