force-app/main/default/objects/Client_Operating_Countries__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Describes the specific status of business in country: active contributor etc.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Existing Business</fullName>
            </value>
            <value>
                <fullName>Prospective Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>